# chksum

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  deny.toml  rustfmt.toml  tarpaulin-report.html
.github/workflows/: ci.yml  rust.yml  security-audit.yml
benches/: hash.rs  main.rs
chksum/: Cargo.toml  README.md  build.rs
chksum-arch/: Cargo.toml
chksum-arch/src/: lib.rs  x86.rs  x86_64.rs
chksum-async/: Cargo.toml  build.rs
chksum-async/examples/: async-multiple-files.rs  async-single-file.rs
chksum-async/src/: lib.rs
chksum-cli/: Cargo.toml  README.md  build.rs
chksum-cli/docs/man/: chksum-cli.1
chksum-cli/extra/completons/: chksum-cli.fish
chksum-cli/src/: command.rs  main.rs  parse.rs
chksum-cli/tests/: cmd_tests.rs
chksum-config/: Cargo.toml
chksum-config/src/: lib.rs
chksum-ffi/: Cargo.toml  README.md
chksum-ffi/headers/: chksum.h
chksum-ffi/src/: lib.rs
chksum-hash/: Cargo.toml
chksum-hash/benches/: hash.rs
chksum-hash/src/: lib.rs  md5.rs  sha1.rs
chksum-sync/: Cargo.toml
chksum-sync/examples/: sync-multiple-files.rs  sync-single-file.rs
chksum-sync/src/: lib.rs
chksum-traits/: Cargo.toml
chksum-traits/src/: convert.rs  lib.rs  num.rs
chksum/src/: lib.rs  prelude.rs
chksum/src/hash/: digest.rs  mod.rs
chksum/src/hash/md5/: block.rs  digest.rs  hash.rs  mod.rs  padding.rs  state.rs
chksum/src/hash/sha1/: block.rs  digest.rs  hash.rs  mod.rs  padding.rs  state.rs
chksum/src/hash/sha2/: mod.rs
chksum/src/hash/sha2/sha224/: digest.rs  hash.rs  padding.rs  state.rs
chksum/src/hash/sha2/sha256/: digest.rs  hash.rs  mod.rs  padding.rs  state.rs
chksum/src/hash/sha2/sha384/: block.rs  digest.rs  hash.rs  padding.rs  state.rs
chksum/src/hash/sha2/sha512/: digest.rs  hash.rs  state.rs
chksum/tests/: bytes_tests.rs  common.rs  directory_tests.rs  file_tests.rs  str_tests.rs  string_tests.rs
debian/: .gitignore  changelog  chksum.manpages  control  copyright  rules
doc/man/: chksum.1
docs/: CHANGELOG.md
docs/man/: chksum.1
extra/completions/: chksum.fish
src/: arch.rs  convert.rs  fs.rs  hash.rs  io.rs  lib.rs  main.rs  num.rs  stream.rs  worker.rs
src/arch/: x86.rs  x86_64.rs
src/hash/: md5.rs  sha1.rs
