[package]
name = "chksum"
description = "Easy way to make checksum of single file or whole directory."
keywords = ["checksum", "directory-checksum", "file-checksum", "hash"]
categories = ["algorithms", "command-line-utilities", "cryptography"]
version = "0.1.0-dev"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ventaquil/chksum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2"
num_cpus = "~1"
spmc = "~0.3"
threadpool = "~1"
walkdir = "~2"

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "main"
harness = false
