[package]
name = "chksum-arch"
version = "0.1.0-rc1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = "Architecture types and utilities for chksum library."
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["parallel-processing", "simd"]
categories = ["hardware-support"]

[dependencies]
chksum-traits = { path = "../chksum-traits", version = "^0.1.0-rc1", default-features = false, features = ["std"] }

[features]
default = []
simd = []
