[package]
name = "chksum-async"
version = "0.1.0-rc1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = ""
readme = ""
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["checksum", "directory-checksum", "file-checksum", "hash"]
categories = ["algorithms", "asynchronous", "cryptography", "filesystem"]

[dependencies]
async-trait = "^0.1"
chksum-config = { path = "../chksum-config" }
chksum-hash = { path = "../chksum-hash", features = ["std"] }
thiserror = "^1.0"
tokio = { version = "^1.13", features = ["fs", "io-util"] }

[dev-dependencies]
chksum-arch = { path = "../chksum-arch" }
futures = "^0.3"
tokio = { version = "^1.13", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
