[package]
name = "chksum-async"
version = "0.1.0-rc3"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = "Asynchronous higher-level functions for chksum library."
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["checksum", "directory-checksum", "file-checksum", "hash"]
categories = ["algorithms", "asynchronous", "cryptography", "filesystem"]

[dependencies]
async-trait = "^0.1"
chksum-config = { path = "../chksum-config", version = "^0.1.0-rc3", default-features = false }
chksum-hash = { path = "../chksum-hash", version = "^0.1.0-rc3", default-features = false , features = ["std"] }
thiserror = "^1.0"
tokio = { version = "^1.13", features = ["fs", "io-util"] }

[dev-dependencies]
chksum-arch = { path = "../chksum-arch" }
futures = "^0.3"
tokio = { version = "^1.13", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
