[package]
name = "chksum-cli"
version = "0.1.0-rc5"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = "Simple checksum calculator."
readme = "README.md"
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["checksum", "directory-checksum", "file-checksum", "hash"]
categories = ["command-line-utilities", "cryptography", "filesystem"]

[dependencies]
anyhow = "1.0.58"
chksum = { path = "../chksum", version = "0.1.0-rc5" }
clap = { version = "3.2.14", features = ["cargo", "wrap_help"] }
itertools = "0.10.3"
rayon = "1.5.3"
thiserror = "1.0.31"

[dev-dependencies]
assert_cmd = { version = "2.0.4", features = ["color-auto"] }
assert_fs = { version = "1.0.7", features = ["color-auto"] }
