[package]
name = "chksum-ffi"
version = "0.1.0-rc1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = ""
readme = "README.md"
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["checksum", "directory-checksum", "ffi", "file-checksum", "hash"]
categories = ["algorithms", "cryptography", "filesystem"]

[dependencies]
chksum = { path = "../chksum", default-features = false }

[lib]
crate-type = ["cdylib"]
