[package]
name = "chksum-hash"
version = "0.1.0-rc1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = ""
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["checksum", "hash"]
categories = ["algorithms", "cryptography"]

[dependencies]
chksum-arch = { path = "../chksum-arch", default-features = false, optional = true }
chksum-traits = { path = "../chksum-traits", default-features = false }
thiserror = { version = "^1.0", optional = true }

[dev-dependencies]
criterion = "^0.3"

[features]
default = ["std"]
simd = ["chksum-arch/simd"]
std = ["chksum-arch", "chksum-traits/std", "thiserror"]

[[bench]]
name = "main"
harness = false
