[package]
name = "chksum-hash"
version = "0.1.0-rc1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = "Cryptography primitives for chksum library."
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["checksum", "hash"]
categories = ["algorithms", "cryptography"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
chksum-arch = { path = "../chksum-arch", version = "^0.1.0-rc1", default-features = false, optional = true }
chksum-traits = { path = "../chksum-traits", version = "^0.1.0-rc1", default-features = false }
thiserror = { version = "^1.0", optional = true }

[dev-dependencies]
criterion = "^0.3"

[features]
default = ["std"]
simd = ["chksum-arch/simd"]
std = ["chksum-arch", "chksum-traits/std", "thiserror"]

[[bench]]
name = "main"
harness = false
