[package]
name = "chksum-sync"
version = "0.1.0-rc1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = ""
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["checksum", "directory-checksum", "file-checksum", "hash"]
categories = ["algorithms", "cryptography", "filesystem"]

[dependencies]
chksum-config = { path = "../chksum-config", default-features = false }
chksum-hash = { path = "../chksum-hash", default-features = false, features = ["std"] }
thiserror = "^1.0"

[dev-dependencies]
chksum-arch = { path = "../chksum-arch", default-features = false }
