[package]
name = "chksum-traits"
version = "0.1.0-rc2"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = "Useful traits for chksum library."
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = []
categories = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
