[package]
name = "chksum"
version = "0.1.0-rc4"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.58.0"
description = "Simple checksum calculator library."
readme = "README.md"
repository = "https://github.com/ventaquil/chksum"
license = "MIT"
keywords = ["checksum", "directory-checksum", "file-checksum", "hash"]
categories = ["algorithms", "cryptography", "filesystem"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
atty = "0.2.14"
thiserror = "1.0.31"

[dev-dependencies]
tempfile = "3.3.0"
